[stable] fix select style of truncated toolbar menu

--- a/less/_toolbars.less
+++ b/less/_toolbars.less
@@ -231,3 +231,9 @@ select.tabbed-pane-header-tabs-drop-down-select{
 #error-warning-count {
 	color: @global-text !important;
 }
+
+// Subtools bar select list when real viewport is tight
+.tabbed-pane-header-tabs-drop-down > select.drop-down-menu option {
+	background-color: @global-background !important;
+	color: @global-text !important;
+}
